# Workflow-CI

./: .gitignore  Docker_Hub.txt  README.md
.github/workflows/: ci.yml
MLProject/: MLProject  facies_preprocessing.csv  modelling.py  pyproject.toml
MLProject/mlruns/0/: meta.yaml
MLProject/mlruns/463232656365177357/: meta.yaml
MLProject/mlruns/463232656365177357/09671dd7fb0b42e4a2d1e10127162651/: meta.yaml
MLProject/mlruns/463232656365177357/09671dd7fb0b42e4a2d1e10127162651/metrics/: test_accuracy  test_f1_macro  test_f1_weighted  test_precision_macro  test_recall_macro  training_accuracy_score  training_log_loss  training_score
MLProject/mlruns/463232656365177357/09671dd7fb0b42e4a2d1e10127162651/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.git.repoURL
MLProject/mlruns/463232656365177357/9590992e42274da6b70773ef8a8a989e/: meta.yaml
MLProject/mlruns/463232656365177357/9590992e42274da6b70773ef8a8a989e/artifacts/: estimator.html
MLProject/mlruns/463232656365177357/9590992e42274da6b70773ef8a8a989e/metrics/: test_accuracy  test_f1_macro  test_f1_weighted  test_precision_macro  test_recall_macro  training_log_loss  training_roc_auc  training_score
MLProject/mlruns/463232656365177357/9590992e42274da6b70773ef8a8a989e/params/: data_path
MLProject/mlruns/463232656365177357/9590992e42274da6b70773ef8a8a989e/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
MLProject/mlruns/463232656365177357/datasets/3dcc9d4bf31c38848ff9f07af783d22d/: meta.yaml
(+8 files in other folders)
