[project]
name = "mlproject-facies-retrain"
version = "0.1.0"
description = "MLflow Project untuk re-training otomatis model Facies Classification"
requires-python = ">=3.12"
dependencies = [
    "mlflow==2.19.0",
    "scikit-learn>=1.5.2,<1.6",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
]

[tool.uv]
package = false
